# quick-translator

./: .gitignore  CLAUDE.md  Readme.md  chat_popup.py  config.py  constants.py  hotkeys.py  installer.iss  main.py  requirements.txt  translate_popup.py  tray.py  tts.py  version_info.py
.github/workflows/: build.yml
frontend/: chat.css  chat.html  chat.js  icons.js  markdown.js  popup.css  popup.html  popup.js  settings.css  settings.html  settings.js  theme.css
openspec/changes/archive/2026-07-02-rewrite-rust-tauri-stage1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-chat-popup-ux/: design.md  (+2 more)
openspec/changes/drop-windows-admin-elevation/: design.md
openspec/changes/harden-runtime-footprint/: design.md  proposal.md  tasks.md
openspec/changes/stage2-chat-popup/: design.md  tasks.md
openspec/changes/translate-popup-markdown/: design.md
openspec/specs/chat-hotkey/: spec.md
openspec/specs/chat-markdown/: spec.md
openspec/specs/chat-popup/: spec.md
openspec/specs/chat-streaming/: spec.md
openspec/specs/config-store/: spec.md
openspec/specs/translate-hotkey/: spec.md
openspec/specs/translation-popup/: spec.md
openspec/specs/translation-streaming/: spec.md
openspec/specs/tray-lifecycle/: spec.md
openspec/specs/windows-tauri-build/: spec.md
python-reference/: api.py  settings.py  tts.py  utils.py
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.py
src-tauri/src/: api.rs  clipboard.rs  config.rs  hotkey.rs  main.rs  windows.rs
(+39 files in other folders)
