[package]
name = "quick-translator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quick-translator"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rdev = "0.5"
arboard = "3"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1"
